src/test/ui/const-generics/generic-function-call-in-array-length.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/generic-function-call-in-array-length.rs:8:29
   |
LL | fn bar<const N: usize>() -> [u32; foo(N)] {
   |                             ^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

